# Projeto-voto

./: CMakeCache.txt  CMakeLists.txt  Colaboração individual  Colaboração individual.txt  LICENSE  README.md
examples/: candidatos.json  eleitores.json  hash.txt
include/: Cadastro.hpp  Candidato.hpp  Eleitor.hpp  Estrutura.hpp  Interface.hpp  Logger.hpp  Security.hpp  json_utils.hpp
src/: Cadastro.cpp  Candidato.cpp  Eleitor.cpp  Estrutura.cpp  Interface.cpp  Logger.cpp  Security.cpp  json.utils.cpp  main.cpp
